Attempt to fix 100vh issue on iOS Safari

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,18 @@ body {
   color: #444;
 }
 
+/*
+  iOS Safari viewport action bar workaround.
+
+  See also:
+  * https://www.eventbrite.com/engineering/mobile-safari-why/
+  * https://nicolas-hoizey.com/2015/02/viewport-height-is-taller-than-the-visible-part-of-the-document-in-some-mobile-browsers.html
+  * https://medium.com/samsung-internet-dev/toolbars-keyboards-and-the-viewports-10abcc6c3769
+*/
+html, body, .container {
+  height: 100%;
+}
+
 .container {
   width: 100vw;
   height: 100vh;
